--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -30,7 +30,7 @@
                                     
                                 </div>
                                 <div>
-                                    <a href="/admin/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
+                                    <a href="/admin/editProduct/<%= product._id %>" class="btn btn-warning btn-sm" style="width:100px;">Edit</a>
                                     <a href="/admin/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
                                 </div> 
                             </div>
