--- a/views/partials/productdetails.ejs
+++ b/views/partials/productdetails.ejs
@@ -20,8 +20,13 @@
 
         <!-- Right Side: Product Image -->
         <div class="col-md-6 product-image-container">
-            <img src="/<%= product.picture.imgUrl %>" alt="<%= product.name %>" class="img-fluid rounded shadow-sm">
+            <img 
+                src="<%= product.picture.imgUrl %>" 
+                alt="<%= product.name %>" 
+                class="img-fluid rounded shadow-sm" 
+                style="width: 500px; height: 400px; object-fit: cover;">
         </div>
+        
     </div>
 
     <!-- Bootstrap JS -->
